--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,16 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.ant-col-4{
+  width: 19.66% !important;
+}
+
+.ant-card-body{
+  padding: 7px !important;
+}
+
+.span-menu{
+  margin-left: 20px;
+  font-size: 20px;
+}
